mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deploy
  namespace: nimesh-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql-cont
        image: mysql:8.0
        ports:
        - containerPort: 3306
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "200m"
        volumeMounts:
          - name: mysql-storage
            mountPath: /var/lib/mysql
          - name: mysql-q
            mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: duniv-pvc
      - name: mysql-q
        configMap:
          name: mysql-query
        
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: nimesh-ns
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP
