duniversity-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: duniv-route
  namespace: nimesh-ns
 
spec:
  parentRefs:
    - name: kgatewayd
  rules: #path based routing
    - matches:
      - path:
          type: PathPrefix
          value: /
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: duniv-svc
          port: 3000
