imagePolicy.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sallowedrepos
spec:
  crd:
    spec:
      names:
        kind: K8sAllowedRepos
      validation:
        openAPIV3Schema:
          properties:
            repos:
              type: array
              items:
                type: string
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8sallowedrepos
 
      violation[{"msg": msg}] {
        container := input_containers[_]
        not allowed_image(container.image)
        msg := sprintf("Image %v is not allowed", [container.image])
      }
 
      allowed_image(image) {
        repo := input.parameters.repos[_]
        startswith(image, repo)
      }
 
      # Pod
      input_containers[c] {
        c := input.review.object.spec.containers[_]
      }
 
      # Deployment + others
      input_containers[c] {
        c := input.review.object.spec.template.spec.containers[_]
      }
